# steno-tools

./: Cargo.toml  LICENSE  Makefile  theory.yaml
sources/: bad-pronunciations  cmudict-0.7b  generated.dict  mle-pronunciation  overrides.yaml  wordlist.txt
sources/pronunciation/: 00-hand-pronunciation
src/: chord.rs  compound_words.rs  dictionary.rs  generated.rs  main.rs  phonology.rs  pronounce.rs  theory.rs  tree.rs  wrapper_impls.rs
