[package]
name = "dict-compare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
bitflags = { version = "2.4.2", features = ["serde"] }
clap = { version = "4.5.1", features = ["derive"] }
enumset = { version = "1.1.3", features = ["serde"] }
indexmap = { version = "2.2.3", features = ["serde"] }
itertools = "0.12.1"
regex = "1.10.3"
serde = { version = "1.0.197", features = ["rc", "derive"] }
serde_json = "1.0.114"
serde_yaml = "0.9.32"
slab = "0.4.9"
smol_str = { version = "0.2.1", features = ["serde"] }
thiserror = "1.0.57"

[dev-dependencies]
test-case = "3.3.1"
